[project]
name = "pyweather"
version = "0.0.1"
description = "A CLI tool for fetching the current weather using Tomorrow.io"
authors = [{ name = "Dekoder-py", email = "dekod3r.py@gmail.com" }]
readme = "README.md"
license = "MIT"
dependencies = [
    "requests",
    "python-dotenv",
    "rich"
]

[project.scripts]
pyweather = "pyweather.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"